# analysis

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  analysis.lvlps  analysis.lvproj
etc/: .gitignore
etc/astronomy/: inspect-fermi-gbm-catalog.Rmd  radiation-intensity.Rmd
etc/astronomy/chime/: inspect-chime-frb-catalog-1.Rmd
etc/astronomy/nasa/: inspect-new-horizons-swap-histogram.Rmd  inspect-new-horizons-swap-ions.Rmd  inspect-new-horizons-swap-validsum-2008.Rmd  inspect-pioneer10-cpi-dist-1.Rmd  inspect-pioneer10-cpi-jupiter.Rmd  inspect-solar-orbiter-swa.Rmd  inspect-solar-orbiter-trajectory.Rmd  inspect-voyager-cosmic-ray.Rmd  inspect-voyager-merged-range.Rmd  inspect-voyager-merged.Rmd  investigating-nasa-data.Rmd
etc/astronomy/quasars/: inspect-milliquas-catalog.Rmd
etc/books/r-for-data-science/: ch-23-model-basics.Rmd  ch-28-graphics-for-communication.Rmd  ch-3-data-visualisation.Rmd  ch-5-data-transformation.Rmd  ch-7-exploratory-data-analysis.Rmd
etc/energy/: norway.Rmd
etc/examples/: 3d-plots.Rmd
etc/finance/: alpha-vantage.txt  compare-indexes-stocks-1.Rmd  compare-indexes-stocks-2.Rmd  compare-indexes-stocks.Rmd  investment-1.Rmd  investment-from-google-sheets-1.Rmd  investment-simulation-1.Rmd  investment-simulation-2.Rmd
etc/fourier/: fourier.Rmd
etc/iot/: dht.Rmd
etc/nasa/: inspect-pioneer10-cpi-1.Rmd  inspect-pioneer10-cpi-dist-1.Rmd  inspect-pioneer10-cpi-jupiter.Rmd  inspect-voyager-cosmic-ray.Rmd
etc/oilandgas/: bhinrigcount.Rmd  bhusrigcount.Rmd  bhwwrigcount.Rmd
etc/physics/: energy-mass-of-batteries.Rmd  plancks-law.Rmd
etc/sandbox/: covid19.Rmd  eiming.Rmd  npd-facility.Rmd
etc/study/: ellipse.Rmd
etc/tutorial/: 3D-rgl-Markdown.Rmd  3D.Rmd  beautiful-maps-2.Rmd  beautiful-maps-3.Rmd  beautiful-maps.Rmd  neural-network-models-in-r.Rmd
include/gos/analysis/: exception.h  tc.h  types.h  version.h.in  window.h
labview/: analysis.lvlib  analysis.vi  convert.vi  datapathsubvi.vi  defaultdatapathsubvi.vi  formatnnmsg.vi  loopmod.vi  loopn.vi  nn.lvlib  nntcp.vi  nntcpautoa.vi  nntcpautob.vi  nntcpsendrecv.vi  projectpathsubvi.vi  sandbox.lvlib  signalgen.vi
scripts/nasa/: fetch.bat  fetch.sh
src/: CMakeLists.txt
src/analysisui/: CMakeLists.txt  analysisui.pro  configuration.cpp  configuration.h  configuration.ini  main.cpp  orchestration.cpp  orchestration.h  resources.qrc  types.h
src/analysisui/qml/analysis/: AnalysisChart.qml  AnalysisPanel.qml  RealSpinBox.qml  main.qml
src/books/r-for-data-science/: ch-6-workflow-scripts-61.R
src/cdf/: CMakeLists.txt
src/cdf/fetch/: CMakeLists.txt  fetchcdf.c
src/cdf/parse/: CMakeLists.txt  parsecdf.c
src/cdf/parsej/: .editorconfig  .gitignore  README.md  pom.xml
src/libanalysis/: CMakeLists.txt  exception.cpp  tc.cpp  types.cpp  version.cpp  window.cpp
src/nasa/: process-pioneer10-mission-trajectory-1.R  process-solar-orbiter-swa-1.R  process-voyager-cosmic-ray.R  process-voyager-trajectory-1.R
src/nn/: CMakeLists.txt
src/nn/nntcpserver/: CMakeLists.txt  nntcpserver.c
src/nn/nnwave/: CMakeLists.txt  nnwave.c
src/python/finance/: investment-1.py
src/python/misc/: HarmOsc_visualize.py
src/python/nasa/: process-pioneer10-jupiter-trajectory-1.py
src/python/physics/: radiation-intensity.py
src/r/: astronomy.R  install-packages.R  p191122.R  p191123.R  p200413a.R  process.R  processpid.R  processpidformd.R  radiation-intensity.R
src/r/development/: blackbox.R
src/r/examples/: combine-data-tables.R  fitting-polynomial.R  ggplot2-lines.R  ggplot2-themes.R  googlesheets-1.R  heatmap.R  histogram.R  mean-every-n-rows.R  nifty-3d-graph.R  plotly-3d-scatter.R  plotly-3d-surface.R  regression-line-equation.R  rgl-3d-scatterplot.R  shiny-app-1.R  shiny-crudtable-1.R  shiny-delay-reactions-1.R
src/r/finance/: cost-1.R  inflation-1.R  investment-1.R  investment-from-google-sheets-1.R  investment-simulation-1.R  investment-simulation-2.R  investment-strategy-1.R  ml.R  quantmod-example-1.R  quantmod-example-compare.R  quantmod-example-index-funds.R  quantmod-example-nov.R
src/r/htx/: crimeratea.R
src/r/iot/: dht202a.R
src/r/mathematics/: interpolation.R  normalizing.R  scaling.R
src/r/nasa/: process-pioneer10-cpi-ip-1h-1.R  process-pioneer10-jupiter-trajectory-1.R  process-solar-orbiter-trajectory-1.R  process-voyager-trajectory-1.R
src/r/oilandgas/: rigcount.R
src/r/physics/: schroedinger.R
src/r/sandbox/: example.R  iris-nn.R  maxwell-boltzmann.R  npd-facility.R  planck.R  psql-insert.R  psql-query.R  psql-read-table.R  psql-write-table.R
src/r/tutorial/: 3D-knot.R  3D.R  beautiful-maps.R  machine-learning-step-by-step.R  mapview-example.R  neural-network-models-in-r.R
tests/: CMakeLists.txt
tests/analysis/: CMakeLists.txt  analysis.h.in  tc.cpp  window.cpp
tests/concepts/: CMakeLists.txt  nearest.cpp
tmp/: .gitignore
tmp/htxpolice/: README.md
tmp/nasa/spdf/: Readme.txt
tmp/oilandgas/bakerhughes/: International Rig Counts for Sep 2022.xlsx  Rig Count Summary_102122.xlsx  Worldwide Rig Count Sep 2022.xlsx  north_america_rotary_rig_count_jan_2000_-_current.xlsb
tmp/quasars/: .gitignore  readme.txt
var/astronomy/: heasarc_fermi2fgl.csv  heasarc_fermigbrst.csv
var/fourier/: retailgas.csv
var/markdown/: pid-black-box-tuning.Rmd  pid-black-box-tuning.html  pid-tuning.Rmd  pid-tuning.html
var/npd/: readme.txt
var/npd/facility/: .gitignore
var/pid/: readme.md
var/pid-0/: pid-tuning.csv  pid-tuning.csv.nc2  pid-vinnsla.csv  pid.csv  pid.csv.nc2  pid.xlsx
var/pid/csv/: 200413a.csv  200413c.csv  200414a.csv  200414b.csv  200414c.csv  200415a.csv  200415b.csv  200419a.csv  200419at.csv
var/pid/excel/: 200413a.xlsx  200413b.xlsx  200413c.xlsx  200413d.xlsx  200413e.xlsx
var/pid/march/: log  pid.csv  pid.xlsx  putty-test.csv  putty.csv
var/pid/november/: 191123run.csv  191124run.csv  pid-lab-view-snapshot.csv  snapshot.csv
var/pid/tdms/: 200413a.tdms  200413a.tdms_index  200413b.tdms  200413b.tdms_index  200413c.tdms  (+3 more)
var/sandbox/: Encoding Time.csv  eiming1.csv  eiming2.csv  generator.csv
(+41 files in other folders)
